# agent-memory-benchmark

./: analyze_failures.py  analyze_locomo_v2.py  benchmark_locomo_100_report.md  benchmark_locomo_100_report_final.md  benchmark_locomo_100_results.json  benchmark_locomo_200_detailed_failures.md  benchmark_locomo_200_report.md  benchmark_locomo_50_gemini_report.md  benchmark_locomo_50_gemini_results.json  benchmark_locomo_50_gpt4o_report.md  benchmark_locomo_50_gpt4o_results.json  benchmark_locomo_conv26_report.md  benchmark_report_v20.md  check_db_inventory.py  check_db_schema.py  generate_locomo_report_win.py  generate_report.py  locomo_failures_analysis.json  locomo_failures_summary.json  nexus_bench_debug.py  nexus_bench_direct.py  nexus_bench_locomo.py  nexus_bench_locomo_50_gemini.py  nexus_bench_locomo_50_gpt4o.py  nexus_bench_manual.py  pyproject.toml
src/memory_bench/: cli.py  judge.py  runner.py  server.py
src/memory_bench/dataset/: beam.py  locomo.py
src/memory_bench/llm/: base.py  gemini.py  openai.py
src/memory_bench/memory/: __init__.py  hindsight.py  nexus.py
src/memory_bench/modes/: rag.py
ui/: index.html  package-lock.json  package.json
ui/src/: api.js  main.js
ui/src/pages/: DatasetDetail.vue  DatasetList.vue  DocumentView.vue  QueryView.vue  RunDetail.vue  SplitDetail.vue
